# qoick

./: .gitignore  Cargo.toml  rustfmt.toml
benches/: qoi_bench.rs  qoick_bench.rs
src/: encode.rs  index.html  lib.rs  main.rs  prepare.rs  public.rs
