[package]
name = "qoick"
version = "0.1.3"
edition = "2024"

[dependencies]

[dependencies.image]
version = "*"
default-features = false
optional = true

[features]
default = ["image"]
image = ["dep:image"]

[dev-dependencies]
criterion = "0.4"

[dev-dependencies.image]
version = "0.25.10"
default-features = false
features = ["png", "jpeg", "qoi"]

[[bench]]
name = "qoick_bench"
path = "benches/qoick_bench.rs"
harness = false
required-features = ["image"]
